...
        icon: const Icon(Icons.download),
        label: Text(
          widget.busy
              ? widget.content.assemblyGroups.isEmpty
                    ? '正在下载资源'
                    : '作品处理中'
              : '下载所选资源',
        ),
      ),
    ],
  );
}

